data/derived/sp14/progs/unify/prog2198.ml.out
Characters 80-95:
  | Sine ex -> sin(pi*. exprToString ex )
                        ^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         float
